# photo_video_renamer

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.txt
.github/workflows/: build.yml  checkout-configure-build-pack.yml  checkout-configure-build.yml  ci.yml  github-actions-demo.yml  linter.yml
cmake/: pack.cmake
lib/: .gitignore  CMakeLists.txt
reg/: directory_background_context_menu.reg  directory_context_menu.reg
renamer/: CMakeLists.txt  renamer.cpp  renamer.h
src/: main.cc  main.cpp  percentage_calculator.cc  percentage_calculator.h  photo_video_renamer.cc  photo_video_renamer.cpp  photo_video_renamer.h  printer.cc  printer.h  progress.cc  progress.h  progress_tracker.cc  progress_tracker.h
test/: filesystem_wrappers.h  percentage_calculator_test.cc  photo_video_renamer_test.cc  photo_video_renamer_test.cpp  printer_test.cc  progress_test.cc  progress_tracker_test.cc
